add App Store badge and tweak how tags and categories are displayed Fixes #3

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,6 +51,8 @@
         <h1 class="blog-title">{{ site.title }}</h1>
         <h2 class="blog-description">{{ site.description }}</h2>
         <a href="/" class="btn">Back to Home</a>
+        <br/><br/>
+        <a href="{{ site.appstore_url }}"><img src="/assets/images/appstore.png"></a>
       </div>
     </div>
     {% include javascripts.html %}
