add issue & pr instead of comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,8 @@
           </div>
           <a name="topofpage"></a>
           {{content}}
+          Questions? Feedback? Corrections?<br/>
+          Open an <a href="{{ site.github }}/issues/new">issue</a> or submit a <a href="{{ site.github }}/compare">pull request</a>
         </section>
         <footer class="post-footer">
           <section class="share">
